--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,13 @@
 
 @layer base {
   * {
-    @apply border-border outline-none list-none;
+    @apply border-border outline-none list-none selection:bg-rose-600/5 selection:text-rose-800;
+
+    ::-webkit-scrollbar {
+      background-color: transparent;
+      width: 0;
+      height: 0;
+    }
   }
 
   body {
@@ -70,16 +76,24 @@
 
 @layer components {
   .navbar {
-    @apply fixed flex justify-between items-center w-full p-4 glassmorphism xm:justify-around;
+    @apply fixed flex justify-between xm:justify-around items-center z-50 px-4 w-full glassmorphism border-b border-b-neutral-800;
   }
 
   .select {
     @apply glassmorphism !border-neutral-800 !text-neutral-50;
   }
+
+  .button-solid {
+    @apply !bg-rose-500 !text-neutral-50 hover:!shadow-[0_0_30px_0_rgb(244_63_94)] !transition !ease-in-out !duration-500;
+  }
+
+  .button-transparent {
+    @apply !bg-transparent !border !border-rose-500 !text-rose-500 hover:!bg-rose-500 hover:!text-neutral-50 !transition !ease-in-out !duration-500;
+  }
 }
 
 @layer utilities {
   .glassmorphism {
-    @apply !bg-transparent !backdrop-filter !backdrop-blur-3xl;
+    @apply !bg-neutral-800/50 !backdrop-filter !backdrop-blur-xl;
   }
 }
