--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,7 @@
 
   body {
     @apply bg-neutral-950 text-neutral-50;
-    font-family: var(--font-poppins);
+    font-family: var(--font-sfPro);
   }
 
   :root {
@@ -93,7 +93,16 @@
 }
 
 @layer utilities {
+  .heading {
+    @apply font-bold text-4xl md:text-5xl text-center;
+  }
+
   .glassmorphism {
     @apply !bg-neutral-800/50 !backdrop-filter !backdrop-blur-xl;
+  }
+
+  .text-stroke {
+    -webkit-text-stroke: 1px rgb(163 163 163);
+    -webkit-text-fill-color: transparent;
   }
 }
